# data-ingest-demo

./: .gitignore  README.md  dataIngestDemo.py  docker-compose.yml  pyproject.toml
notebooks/: demo_analysis.ipynb
