[tool.poetry]
name = "data-ingest-demo"
version = "0.1.0"
description = ""
authors = ["Jamie Perkins <japrkns@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
pandas = "^2.0.2"
psycopg2-binary = "^2.9.6"
kaggle = "^1.5.13"
sqlalchemy = "^2.0.16"
jupyterlab = "^4.0.2"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
